# wrr-norcal

./: .gitignore  CONTRIBUTORS.txt  LICENSE  README.md  local.yml  manage.py  production.yml  pyproject.toml  pytest.ini  setup.cfg
.envs/.local/: .django  .postgres
.github/workflows/: ci.yml
compose/local/django/: Dockerfile
compose/local/docs/: Dockerfile
compose/production/django/: Dockerfile  start
compose/production/traefik/: traefik.yml
config/: api_router.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: Makefile  conf.py  howto.rst  index.rst  make.bat  users.rst
requirements/: base.txt  local.txt
wrr_norcal/: conftest.py
wrr_norcal/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
wrr_norcal/templates/: base.html
wrr_norcal/templates/pages/: home.html
wrr_norcal/users/: admin.py  apps.py  models.py  urls.py
wrr_norcal/users/migrations/: 0001_initial.py
wrr_norcal/users/tests/: test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
wrr_norcal/wrr/: apps.py
