[tool.poetry]
name = "wrr-norcal"
version = "0.1.0"
description = "Wildfire Rapid Response - NorCal"
authors = ["Hugo <hugotinoco@icloud.com>"]
license = "LICENSE"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
